force-app/main/default/objects/Project__c/fields/ExpectedTotalHours__c.field-meta.xml
<CustomField>
    <fullName>ExpectedTotalHours__c</fullName>
    <label>Expected Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>