force-app/main/default/objects/Project__c/fields/External_Link__c.field-meta.xml
<CustomField>
    <fullName>External_Link__c</fullName>
    <inlineHelpText>Any documents you share with customer. Please take note in text and URL here for quick access!</inlineHelpText>
    <label>External Link</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>