force-app/main/default/objects/Project__c/fields/InternalProject__c.field-meta.xml
<CustomField>
    <fullName>InternalProject__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Project</label>
    <type>Checkbox</type>
</CustomField>