force-app/main/default/objects/Project__c/fields/MainFolder__c.field-meta.xml
<CustomField>
    <fullName>MainFolder__c</fullName>
    <inlineHelpText>Link (URL) of folder which contains files or sub-folder relating to this project</inlineHelpText>
    <label>Main Folder</label>
    <type>Url</type>
</CustomField>