force-app/main/default/objects/Project__c/fields/ProjectPurpose__c.field-meta.xml
<CustomField>
    <fullName>ProjectPurpose__c</fullName>
    <label>Project Purpose</label>
    <type>TextArea</type>
</CustomField>