force-app/main/default/objects/Project__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plan</fullName>
                <default>true</default>
                <label>Plan</label>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
            <value>
                <fullName>Analyze</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Build</fullName>
            </value>
            <value>
                <fullName>Validate</fullName>
            </value>
            <value>
                <fullName>Deploy</fullName>
            </value>
            <value>
                <fullName>On-hold</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>